[package]
name = "cc_validator"
version = "0.1.0"
edition = "2024"
authors = ["Liam Conrad <liam@w4pho.net>"]

[lib]
name = "luhn"
path = "src/lib/luhn/mod.rs"

[[bin]]
name = "cc_validator"
path = "src/bin/cc_validator/main.rs"

[[bin]]
name = "gen_luhn_numbers"
path = "src/bin/gen_luhn_numbers/main.rs"

[dependencies]

[profile.release]
